--- a/ansible/roles/forc_api/templates/forc.service.j2
+++ b/ansible/roles/forc_api/templates/forc.service.j2
@@ -14,7 +14,7 @@ WorkingDirectory={{ FORC_INSTALLATION_PATH }}/simpleVMWebGateway
 ExecStart=/usr/local/bin/uwsgi --ini uwsgi.ini
 
 
-ENVIRONMENT="PATH={{ FORC_INSTALLATION_PATH }}/simpleVMWebGateway/venv/bin"
+Environment="PATH={{ FORC_INSTALLATION_PATH }}/simpleVMWebGateway/FlaskOpenRestyConfigurator/venv/bin"
 
 Environment="FORC_BACKEND_PATH={{ FORC_BACKEND_PATH }}"
 Environment="FORC_TEMPLATE_PATH={{ FORC_TEMPLATE_PATH }}"
