--- a/ansible/roles/forc_api/templates/nginx.conf.j2
+++ b/ansible/roles/forc_api/templates/nginx.conf.j2
@@ -11,6 +11,7 @@ events {
 
 http {
     include       mime.types;
+    lua_package_path "{{ FORC_BACKEND_PATH }}/scripts/?.lua;;";
     default_type  application/octet-stream;
     #For some reason, nginx wants a hardcoded Name Resolver
     resolver {{ OPENRESTY_DNS_SERVER }};
