fix(nginx.conf): iat.slack from 120 to 600

--- a/ansible/roles/forc_api/templates/nginx.conf.j2
+++ b/ansible/roles/forc_api/templates/nginx.conf.j2
@@ -36,7 +36,8 @@ http {
                 client_id = "{{ FORC_OIDC_CLIENT_ID }}",
                 client_secret = "{{ FORC_OIDC_CLIENT_SECRET }}",
                 logout_path = "/logout",
-                ssl_verify = "no"
+                ssl_verify = "no",
+                iat_slack = 600
           }
      }
 
