--- a/ansible/roles/forc_api/templates/forc.env.j2
+++ b/ansible/roles/forc_api/templates/forc.env.j2
@@ -2,6 +2,6 @@ FORC_API_KEY={{ FORC_API_KEY }}
 FORC_SECRET_KEY={{ FORC_SECRET_KEY }}
 FORC_BACKEND_PATH={{ FORC_BACKEND_PATH }}
 FORC_TEMPLATE_PATH={{ FORC_TEMPLATE_PATH }}
-FORC_VERSION={{ FORC_VERSION or 0.2 }}
-DEBUG={{ FORC_DEBUG or False }}
-LOG_LEVEL={{ FORC_LOG_LEVEL or 'INFO' }}
+FORC_VERSION={{ FORC_VERSION | default(0.2) }}
+DEBUG={{ FORC_DEBUG | default(False) }}
+LOG_LEVEL={{ FORC_LOG_LEVEL | default('INFO') }}
