--- a/ansible/roles/forc_api/templates/forc.service.j2
+++ b/ansible/roles/forc_api/templates/forc.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=uWSGI instance to serve the FastapiOpenResty Configurator
+Description=Gunicorn instance to serve the FastapiOpenResty Configurator
 After=network.target
 
 [Service]
