--- a/ansible/roles/forc_api/templates/nginx.conf.j2
+++ b/ansible/roles/forc_api/templates/nginx.conf.j2
@@ -143,5 +143,14 @@ http {
             location = /50x.html {
                 root   html;
             }
-    }
+
+       error_page   404  /404.html;
+            location = /404.html {
+                root   html;
+            }
+
+       error_page   403  /403.html;
+            location = /403.html {
+                root   html;
+            }    }
 }
