--- a/ansible/roles/forc_api/templates/nginx.conf.j2
+++ b/ansible/roles/forc_api/templates/nginx.conf.j2
@@ -50,26 +50,33 @@ http {
 
 
 
-    server {
-        listen {{ FORC_SERVICE_PORT }} ssl http2;
-        ssl_certificate  /etc/letsencrypt/live/{{ DOMAIN }}/fullchain.pem;
-        ssl_certificate_key  /etc/letsencrypt/live/{{ DOMAIN }}/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers on;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Referrer-Policy 'strict-origin';
-        ssl_stapling on;
-        ssl_stapling_verify on;
-
-        location / {
-                proxy_pass http://unix:/var/run/forc.sock;
-                }
-
-        }
+    {{ if FORC_SERVICE_USE_HTTPS }}
+server {
+    listen {{ FORC_SERVICE_PORT }} ssl http2;
+    ssl_certificate  /etc/letsencrypt/live/{{ DOMAIN }}/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/{{ DOMAIN }}/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers on;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy 'strict-origin';
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    location / {
+            proxy_pass http://unix:/var/run/forc.sock;
+            }
+}
+{{ else }}
+server {
+    listen {{ FORC_LOCAL_NETWORK }}:{{ FORC_SERVICE_PORT }};
+    location / {
+            proxy_pass http://unix:/var/run/forc.sock;
+            }
+}
+{{ end }}
 
 
     server {
